--- a/src/Components/Navbar/Navbar.css
+++ b/src/Components/Navbar/Navbar.css
@@ -8,11 +8,40 @@ nav {
     z-index: 10;
 }
 
-.nav-left .menu_icon {
+.nav-left .menu-icon {
     width: 22px;
     margin-right: 25px;
 }
 
 .nav-left .logo {
-    width: 
+    width: 100px;
+}
+
+.nav-middle .search-box {
+    border: 1px solid #ccc;
+    margin-left: 15px;
+    margin-right: 15px;
+    padding: 8px 12px;
+    border-radius: 25px;
+}
+
+.nav-middle .search-box input {
+    width: 400px;
+    border: 0;
+    outline: 0;
+    background: transparent;
+}
+
+.nav-middle .search-box img {
+    width: 15px;
+}
+
+.nav-right img{
+    width: 25px;
+    margin-right: 25px;
+}
+
+.nav-right .user-icon {
+    width: 35px;
+    border-radius: 50%;
 }
