--- a/src/Components/Playvideo/Playvideo.css
+++ b/src/Components/Playvideo/Playvideo.css
@@ -107,9 +107,10 @@
 }
 
 .comments img{
-    width: 35px;
+    width: 45px;
     border-radius: 50%;
     margin-right: 15px;
+    margin-top: 10px;
 }
 
 .comments h3{
@@ -132,6 +133,7 @@
 }
 
 .comment-action img{
+    margin-top: 0;
     border-radius: 0;
     width: 20px;
     margin-right: 5px;
