--- a/src/Components/Recomended/Recomended.css
+++ b/src/Components/Recomended/Recomended.css
@@ -27,3 +27,33 @@
     font-size: 12px;
     color: #555;
 }
+
+.hidden{
+    display: none;
+}
+
+@media (max-width: 900px){
+    .recomended{
+        flex-basis: 100%;
+    }
+    .hidden{
+        display: block;
+        font-size: 16px;
+        margin-bottom: 10px;
+        color: black;
+        margin-left: 5px;
+    }
+}
+
+@media (min-width: 600px) and (max-width: 900px){
+    .vid-info h4{
+        font-size: 15px;
+        margin-bottom: 5px;
+    }
+    
+    .vid-info p{
+        font-weight: 600;
+        font-size: 13px;
+        color: #555;
+    }
+}
