--- a/src/Components/Sidebar/Sidebar.css
+++ b/src/Components/Sidebar/Sidebar.css
@@ -10,7 +10,7 @@
 
 .shortcut-links img{
     width: 20px;
-    margin-right: 20px;
+    margin-right: 15px;
 }
 
 .side-link{
@@ -38,7 +38,7 @@
 .subscribed-list img{
     width: 25px;
     border-radius: 50%;
-    margin-right: 20px;
+    margin-right: 10px;
 }
 
 .small-sidebar{
@@ -61,4 +61,10 @@
 .side-link.active img{
     padding-bottom: 2px;
     border-bottom: 3px solid red;
+}
+
+@media (max-width:900px){
+    .sidebar{
+        display: none;
+    }
 }
